GTK 3.20 correct for recent mate-panel changes
Fix cpufreq applet unit labels not showing up when panel restarted-must use 0px padding
Fix panel rendering 1px above bottom of screen-must use padding 0px as panel default
BlackMATE is one of the few themes using a non-zero default padding value, I had to fix some wierd bugs in the panel with all GTK versions

GTK 3-20 specific fixes:
Stop jumping panel buttons
Match tasklist and calendar buttons to  GTK 3.16 and 3.18  results with current panel versions, highlight only active/checked window's button

--- a/desktop-themes/BlackMATE/gtk-3.0/mate-applications.css
+++ b/desktop-themes/BlackMATE/gtk-3.0/mate-applications.css
@@ -270,6 +270,14 @@ window>*>box>box>box>scrolledwindow>.view .caja-canvas-item:selected {
     text-shadow: none;
 }
 
+/*stop panel from being spaced above bottom of screen,
+  stop failure of cpufreq-appet to show all labels*/
+
+.mate-panel-menu-bar,
+.mate-panel-menu-bar * {
+	padding: 0px;
+}
+
 /* workaround to avoid unwanted black frames if switching compositor on/off */
 .mate-panel-menu-bar .window-frame.csd.popup {
     box-shadow: none;
@@ -296,35 +304,12 @@ window>*>box>box>box>scrolledwindow>.view .caja-canvas-item:selected {
                 inset  0px -1px shade (@theme_selected_bg_color, 1.3); */
 }
 
-/* hide buttons */
-.mate-panel-menu-bar button {
-    background: transparent;
-    border-image: none;
-    border-radius: 3px;
-    border-width: 0px;
-    padding: 0px;
-    box-shadow: none;
+/* Keep rounded applet borders from renderin with darker corners */
+
+#PanelPlug {
+	border-radius: 0px;
 }
 
-.mate-panel-menu-bar button:hover {
-    border-style: solid;
-    border-width: 0px;
-    border-color: shade(@button_border, 1.1);
-    background-image: linear-gradient(to bottom,
-                                      shade(@button_gradient_color_a, 1.5),
-                                      shade(@button_gradient_color_a, 0.7) 39%,
-                                      @theme_bg_color 40%,
-                                      shade(@less_dark_color, 0.4));
-}
-
-.mate-panel-menu-bar button:hover:active {
-    border-style: solid;
-    border-width: 0px;
-    background-image: linear-gradient(to bottom,
-                                      shade(@button_gradient_color_b, 0.7),
-                                      @theme_bg_color 50%,
-                                      shade(@button_gradient_color_a, 1.5));
-}
 
 /*sliders now need a background*/
 
@@ -379,6 +364,16 @@ MatePanelAppletFrameDBus {
 .mate-panel-menu-bar menu menuitem:checked:hover,
 .mate-panel-menu-bar menu menuitem:active:hover,
 .mate-panel-menu-bar menu menuitem:hover {
+}
+
+/* hide buttons by default */
+.mate-panel-menu-bar button {
+    background: transparent;
+    border-image: none;
+    border-radius: 3px;
+    border-width: 0px;
+    padding: 0px;
+    box-shadow: none;
 }
 
 /* Mate menu button normal */
@@ -437,7 +432,7 @@ dictionary */
 }
 
 /*Wncklist */
-.mate-panel-menu-bar button {
+.mate-panel-menu-bar #tasklist-button {
     transition: all 400ms ease-out;
     padding: 2px;
     border-radius: 3px;
@@ -446,6 +441,8 @@ dictionary */
 	border-color:transparent;
     text-shadow: none;
     color: @theme_fg_color;
+	background-image: none;
+/* Does NOT march gtk3.16/3.18 results 
     background-image: -gtk-gradient (radial,
                       0.5 -2.0, 2.0,
                       0.5 -2.0, 3.0,
@@ -453,12 +450,12 @@ dictionary */
                       color-stop (0.42, shade(@button_gradient_color_a, 0.7)),
                       color-stop (0.43, @theme_bg_color),
                       to (shade(@button_gradient_color_b, 0.7)));
+*/
 }
-
-.mate-panel-menu-bar button:checked:hover,
-.mate-panel-menu-bar button:checked,
-.mate-panel-menu-bar button:active:hover,
-.mate-panel-menu-bar button:active {
+.mate-panel-menu-bar #tasklist-button:checked:hover,
+.mate-panel-menu-bar #tasklist-button:checked,
+.mate-panel-menu-bar #tasklist-button:active:hover,
+.mate-panel-menu-bar #tasklist-button:active {
     border-radius: 3px;
     color: @theme_fg_color;
     border-style: solid;
